<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="12dp">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

    <packag.nnk.com.userfuelapp.ui.CustomTextView
        android:layout_width="wrap_content"
        android:id="@+id/text_100"
        android:textSize="20sp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:layout_margin="4dp"
        android:text="@string/two_rs"
        android:background="@drawable/rect_select_round"
        android:layout_height="wrap_content"/>


    <packag.nnk.com.userfuelapp.ui.CustomTextView
        android:layout_width="wrap_content"
        android:id="@+id/text_200"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:layout_weight="1"
        android:paddingBottom="5dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/two_rs1"
        android:background="@drawable/rect_select_round"
        android:layout_height="wrap_content"/>


        <packag.nnk.com.userfuelapp.ui.CustomTextView
            android:layout_width="wrap_content"
            android:id="@+id/text_500"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
           android:gravity="center"
            android:text="@string/two_rs2"
            android:background="@drawable/rect_select_round"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="5">

        <packag.nnk.com.userfuelapp.ui.CustomTextView
            android:layout_width="wrap_content"
            android:id="@+id/text_800"
            android:textSize="20sp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:layout_margin="4dp"
            android:text="@string/two_rs3"
            android:background="@drawable/rect_select_round"
            android:layout_height="wrap_content"/>


        <packag.nnk.com.userfuelapp.ui.CustomTextView
            android:layout_width="wrap_content"
            android:id="@+id/text_1000"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/two_rs4"
            android:background="@drawable/rect_select_round"
            android:layout_height="wrap_content"/>



    </LinearLayout>


<androidx.appcompat.widget.AppCompatTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:textSize="20sp"
    android:visibility="gone"
    android:layout_marginTop="15dp"
    android:text="---------- OR ----------"/>
    <EditText
        android:id="@+id/other_money"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:maxLength="4"
        android:hint="Amount"
        android:inputType="number"
        android:textColor="@color/quantum_black_100"
        android:textSize="20sp" />


</LinearLayout>
</androidx.cardview.widget.CardView>