<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="12dp"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:padding="12dp">

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon_pb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.026" />

        <packag.nnk.com.userfuelapp.ui.CustomMediumFontTextView
            android:id="@+id/p_name"
            android:layout_width="284dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:text="@string/indian"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.316"
            app:layout_constraintStart_toEndOf="@+id/image_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <packag.nnk.com.userfuelapp.ui.CustomTextView
            android:id="@+id/p_adress"
            android:layout_width="282dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:lines="2"
            android:text="@string/adresss"
            android:textColor="@color/quantum_black_100"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toEndOf="@+id/image_icon"
            app:layout_constraintTop_toBottomOf="@+id/p_name"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>